# openssl_tpm2_engine

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  create_tpm2_key.1.in  create_tpm2_key.c  e_tpm2-ecc.c  e_tpm2-ecc.h  e_tpm2-rsa.c  e_tpm2-rsa.h  e_tpm2.c  e_tpm2.h  ibm-tss.h  intel-tss.h  load_tpm2_key.c  openssl.cnf.sample  seal_tpm2_data.1.in  seal_tpm2_data.c  signed_tpm2_policy.c  tpm2-asn.h  tpm2-common.c  tpm2-common.h  tpm2-tss.h  unseal_tpm2_data.c
doc/: Makefile.am  draft-bottomley-tpm2-keys.xml
src/engine/: Makefile.am  e_tpm2-ecc.c  e_tpm2-rsa.c  e_tpm2.c
src/include/: ibm-tss.h  intel-tss.h  opensslmissing.h  tpm2-common.h  tpm2-tss.h
src/libcommon/: Makefile.am  tpm2-common.c
src/opensslmissing/: Makefile.am  rsa.c  signature.c
src/provider/: Makefile.am  decode_encode.c  decryption.c  keymgmt.c  provider.c  provider.h  signatures.c  store.c
src/tools/: Makefile.am  attest_tpm2_primary.1.in  attest_tpm2_primary.c  create_tpm2_key.1.in  create_tpm2_key.c  load_tpm2_key.1.in  load_tpm2_key.c  openssl_tpm2_engine.7.in  seal_tpm2_data.1.in  seal_tpm2_data.c  signed_tpm2_policy.1.in  signed_tpm2_policy.c  unseal_tpm2_data.1.in  unseal_tpm2_data.c
tests/: Makefile.am  attestation.sh  check_auth.sh  check_counter_timer.sh  check_curves.sh  check_der.sh  check_enhanced_auth.sh  check_importable.sh  check_locality.sh  check_old_keys.sh  check_rsa_oaep_pss.sh  check_secret_policies.sh  check_signed_policies.sh  check_tpm_directory.sh  check_wrap_auth.sh  create_ecc.sh  create_non_tpm_keys.sh  create_nonopenssl_ecc.sh  create_tpm_key.sh  create_tpm_key_auth.sh  da_check.sh  derive_ecc.sh  dynamic_engine.sh  fail_connect.sh  openssl.cnf  restricted_parent.sh  seal_unseal.sh  start_sw_tpm.sh  stop_sw_tpm.sh  test-common.sh  test_nv_key.sh  wrap_ecc.sh  wrap_generic_ecc.sh  wrap_pkcs12.sh  wrap_tpm_key.sh
tests/engine/: Makefile.am  openssl.cnf
tests/policies/: policy_authvalue_pcr.txt  policy_pcr_authvalue.txt  policy_pcrsha1.txt  policy_pcrsha384.txt
tests/provider/: Makefile.am  openssl.cnf
